--- a/.spi.yml
+++ b/.spi.yml
@@ -2,3 +2,4 @@ version: 1
 builder:
   configs:
     - documentation_targets: [SwiftUIIntrospect]
+      custom_documentation_parameters: [--include-extended-types]
