--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,11 +47,13 @@ jobs:
           - [ios, 14]
           - [ios, 15]
           - [ios, 16]
+          - [ios, 17]
 
           - [tvos, 13]
           - [tvos, 14]
           - [tvos, 15]
           - [tvos, 16]
+          - [tvos, 17]
 
           - [macos, 11]
           - [macos, 12]
@@ -70,6 +72,9 @@ jobs:
             install: true
           - platform: [ios, 16]
             runtime: iOS 16.4
+            install: true
+          - platform: [ios, 16]
+            xcode: 15.0
             install: false
 
           - platform: [tvos, 13]
@@ -85,6 +90,9 @@ jobs:
             install: true
           - platform: [tvos, 16]
             runtime: tvOS 16.4
+            install: true
+          - platform: [tvos, 17]
+            xcode: 15.0
             install: false
 
           - platform: [macos, 11]
@@ -110,7 +118,7 @@ jobs:
             github.com/XcodesOrg/xcodes
 
       - name: Select Xcode version
-        run: sudo xcodes select ${{ matrix.xcode || '14.3' }}
+        run: sudo xcodes select ${{ matrix.xcode || '15.0' }}
 
       - if: ${{ matrix.install }}
         name: Install Required Runtime (${{ matrix.runtime }})
