--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,9 +72,9 @@ jobs:
             install: true
           - platform: [ios, 16]
             runtime: iOS 16.4
-            install: true
+            install: false
           - platform: [ios, 17]
-            xcode: 15.0
+            runtime: iOS 17.0
             install: false
 
           - platform: [tvos, 13]
@@ -90,9 +90,9 @@ jobs:
             install: true
           - platform: [tvos, 16]
             runtime: tvOS 16.4
-            install: true
+            install: false
           - platform: [tvos, 17]
-            xcode: 15.0
+            runtime: tvOS 17.0
             install: false
 
           - platform: [macos, 11]
@@ -135,7 +135,7 @@ jobs:
         name: Build Showcase
         run: fastlane build platform:${{ matrix.platform[0] }} version:${{ matrix.platform[1] }} scheme:Showcase
 
-      - if: ${{ join(matrix.platform, ' ') != 'ios 13' && join(matrix.platform, ' ') != 'tvos 13' }}
+      - if: ${{ join(matrix.platform, ' ') != 'ios 13' && join(matrix.platform, ' ') != 'tvos 13' && join(matrix.platform, ' ') != 'ios 17' && join(matrix.platform, ' ') != 'tvos 17' }}
         name: Run Tests (Introspect)
         run: fastlane test platform:${{ matrix.platform[0] }} version:${{ matrix.platform[1] }} scheme:Introspect
 
