--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,6 +72,7 @@ jobs:
             install: true
           - platform: [ios, 16]
             runtime: iOS 16.4
+            xcode: 14.3.1
             install: false
           - platform: [ios, 17]
             runtime: iOS 17.0
@@ -90,6 +91,7 @@ jobs:
             install: true
           - platform: [tvos, 16]
             runtime: tvOS 16.4
+            xcode: 14.3.1
             install: false
           - platform: [tvos, 17]
             runtime: tvOS 17.0
