--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,10 +73,8 @@ jobs:
           - platform: [ios, 16]
             runtime: iOS 16.4
             xcode: 14.3.1
-            install: false
           - platform: [ios, 17]
             runtime: iOS 17.0
-            install: false
 
           - platform: [tvos, 13]
             runtime: tvOS 13.4
@@ -91,23 +89,21 @@ jobs:
             install: true
           - platform: [tvos, 16]
             runtime: tvOS 16.4
-            install: false
           - platform: [tvos, 17]
             runtime: tvOS 17.0
-            install: false
 
           - platform: [macos, 11]
+            runtime: macOS 11
             os: macos-11
             xcode: 13.2.1
-            install: false
           - platform: [macos, 12]
+            runtime: macOS 12
             os: macos-12
             xcode: 14.2
-            install: false
           - platform: [macos, 13]
+            runtime: macOS 13
             os: macos-13
             xcode: 15.0
-            install: false
     steps:
       - name: Git Checkout
         uses: actions/checkout@v3
