--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,24 +42,6 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        platform:
-          - [ios, 13]
-          - [ios, 14]
-          - [ios, 15]
-          - [ios, 16]
-          - [ios, 17]
-
-          - [tvos, 13]
-          - [tvos, 14]
-          - [tvos, 15]
-          - [tvos, 16]
-          - [tvos, 17]
-
-          - [macos, 11]
-          - [macos, 12]
-          - [macos, 13]
-
-          - [visionos, 1]
         include:
           - platform: [ios, 13]
             runtime: iOS 13.7
@@ -107,9 +89,9 @@ jobs:
             os: macos-13
             xcode: 15.0
 
-          - platform: [visionos, 1]
-            runtime: visionOS 1.0
-            os: macos-13
+          # - platform: [visionos, 1]
+          #   runtime: visionOS 1.0
+          #   os: macos-13
     steps:
       - name: Git Checkout
         uses: actions/checkout@v3
