--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,6 +50,7 @@ jobs:
             install: true
           - platform: [ios, 14]
             runtime: iOS 14.5
+            xcode: 14.2
             install: true
           - platform: [ios, 15]
             runtime: iOS 15.5
