--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -104,12 +104,11 @@ jobs:
             os: macos-13
             xcode: 15.0
 
-          # FIXME: this currently hangs on CI
-          # - platform: [visionos, 1]
-          #   runtime: visionOS 1.0-beta2
-          #   os: macos-13
-          #   xcode: 15.0
-          #   install: true
+          - platform: [visionos, 1]
+            runtime: visionOS 1.0-beta2
+            os: macos-13
+            xcode: 15.0
+            install: true
     steps:
       - name: Git Checkout
         uses: actions/checkout@v3
