--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -108,7 +108,6 @@ jobs:
             runtime: visionOS 1.0-beta2
             os: macos-13
             xcode: 15.0
-            install: true
     steps:
       - name: Git Checkout
         uses: actions/checkout@v3
@@ -129,6 +128,10 @@ jobs:
           timeout_minutes: 15
           max_attempts: 3
           command: sudo xcodes runtimes install '${{ matrix.runtime }}'
+
+      - if: ${{ matrix.platform[0] == 'visionos' }}
+        name: Install visionOS Runtime
+        run: xcodebuild -downloadPlatform visionOS
 
       - if: false
         name: '[Debug] List Available Runtimes, Simulators, and Destinations'
