--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,66 +43,66 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          # - platform: [ios, 13]
-          #   runtime: iOS 13.7
-          #   os: macos-12
-          #   xcode: 14.2
-          #   install: true
-          # - platform: [ios, 14]
-          #   runtime: iOS 14.5
-          #   os: macos-13
-          #   xcode: 14.3.1
-          #   install: true
-          # - platform: [ios, 15]
-          #   runtime: iOS 15.5
-          #   os: macos-13
-          #   xcode: 15.0
-          #   install: true
-          # - platform: [ios, 16]
-          #   runtime: iOS 16.4
-          #   os: macos-13
-          #   xcode: 14.3.1
-          # - platform: [ios, 17]
-          #   runtime: iOS 17.0
-          #   os: macos-13
-          #   xcode: 15.0
+          - platform: [ios, 13]
+            runtime: iOS 13.7
+            os: macos-12
+            xcode: 14.2
+            install: true
+          - platform: [ios, 14]
+            runtime: iOS 14.5
+            os: macos-13
+            xcode: 14.3.1
+            install: true
+          - platform: [ios, 15]
+            runtime: iOS 15.5
+            os: macos-13
+            xcode: 15.0
+            install: true
+          - platform: [ios, 16]
+            runtime: iOS 16.4
+            os: macos-13
+            xcode: 14.3.1
+          - platform: [ios, 17]
+            runtime: iOS 17.0
+            os: macos-13
+            xcode: 15.0
 
-          # - platform: [tvos, 13]
-          #   runtime: tvOS 13.4
-          #   os: macos-12
-          #   xcode: 14.2
-          #   install: true
-          # - platform: [tvos, 14]
-          #   runtime: tvOS 14.5
-          #   os: macos-13
-          #   xcode: 14.3.1
-          #   install: true
-          # - platform: [tvos, 15]
-          #   runtime: tvOS 15.4
-          #   os: macos-13
-          #   xcode: 15.0
-          #   install: true
-          # - platform: [tvos, 16]
-          #   runtime: tvOS 16.4
-          #   os: macos-13
-          #   xcode: 15.0
-          # - platform: [tvos, 17]
-          #   runtime: tvOS 17.0
-          #   os: macos-13
-          #   xcode: 15.0
+          - platform: [tvos, 13]
+            runtime: tvOS 13.4
+            os: macos-12
+            xcode: 14.2
+            install: true
+          - platform: [tvos, 14]
+            runtime: tvOS 14.5
+            os: macos-13
+            xcode: 14.3.1
+            install: true
+          - platform: [tvos, 15]
+            runtime: tvOS 15.4
+            os: macos-13
+            xcode: 15.0
+            install: true
+          - platform: [tvos, 16]
+            runtime: tvOS 16.4
+            os: macos-13
+            xcode: 15.0
+          - platform: [tvos, 17]
+            runtime: tvOS 17.0
+            os: macos-13
+            xcode: 15.0
 
-          # - platform: [macos, 11]
-          #   runtime: macOS 11
-          #   os: macos-11
-          #   xcode: 13.2.1
-          # - platform: [macos, 12]
-          #   runtime: macOS 12
-          #   os: macos-12
-          #   xcode: 14.2
-          # - platform: [macos, 13]
-          #   runtime: macOS 13
-          #   os: macos-13
-          #   xcode: 15.0
+          - platform: [macos, 11]
+            runtime: macOS 11
+            os: macos-11
+            xcode: 13.2.1
+          - platform: [macos, 12]
+            runtime: macOS 12
+            os: macos-12
+            xcode: 14.2
+          - platform: [macos, 13]
+            runtime: macOS 13
+            os: macos-13
+            xcode: 15.0
 
           - platform: [visionos, 1]
             runtime: visionOS 1.0-beta2
