--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -44,6 +44,8 @@ body:
       Explanation of how to reproduce the incorrect behavior.
 
       This could include an attached project or link to code that is exhibiting the issue, and/or a screen recording.
+
+      Please make sure the code you are sharing is minimal and can be run independently of your project, otherwise it may be difficult to debug and will take longer to fix.
     placeholder: |
       1. ...
   validations:
