--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,63 +43,63 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - platform: [ios, 13]
+          - platform: [iOS, 13]
             runtime: iOS 13.7
             os: macos-12
             xcode: 14.2
             install: true
-          - platform: [ios, 14]
+          - platform: [iOS, 14]
             runtime: iOS 14.5
             os: macos-13
             xcode: 14.3.1
             install: true
-          - platform: [ios, 15]
+          - platform: [iOS, 15]
             runtime: iOS 15.5
             os: macos-13
             xcode: 15.0
             install: true
-          - platform: [ios, 16]
+          - platform: [iOS, 16]
             runtime: iOS 16.4
             os: macos-13
             xcode: 14.3.1
-          - platform: [ios, 17]
+          - platform: [iOS, 17]
             runtime: iOS 17.0
             os: macos-13
             xcode: 15.0
 
-          - platform: [tvos, 13]
+          - platform: [tvOS, 13]
             runtime: tvOS 13.4
             os: macos-12
             xcode: 14.2
             install: true
-          - platform: [tvos, 14]
+          - platform: [tvOS, 14]
             runtime: tvOS 14.5
             os: macos-13
             xcode: 14.3.1
             install: true
-          - platform: [tvos, 15]
+          - platform: [tvOS, 15]
             runtime: tvOS 15.4
             os: macos-13
             xcode: 15.0
             install: true
-          - platform: [tvos, 16]
+          - platform: [tvOS, 16]
             runtime: tvOS 16.4
             os: macos-13
             xcode: 15.0
-          - platform: [tvos, 17]
+          - platform: [tvOS, 17]
             runtime: tvOS 17.0
             os: macos-13
             xcode: 15.0
 
-          - platform: [macos, 11]
+          - platform: [macOS, 11]
             runtime: macOS 11
             os: macos-11
             xcode: 13.2.1
-          - platform: [macos, 12]
+          - platform: [macOS, 12]
             runtime: macOS 12
             os: macos-12
             xcode: 14.2
-          - platform: [macos, 13]
+          - platform: [macOS, 13]
             runtime: macOS 13
             os: macos-13
             xcode: 15.0
@@ -137,18 +137,18 @@ jobs:
           xcrun simctl list
           xcodebuild -scheme "Showcase" -showdestinations
 
-      - if: ${{ join(matrix.platform, ' ') != 'macos 11' }}
+      - if: ${{ join(matrix.platform, ' ') != 'macOS 11' }}
         name: Build Showcase
         run: fastlane build platform:${{ matrix.platform[0] }} version:${{ matrix.platform[1] }} scheme:Showcase
 
-      - if: ${{ join(matrix.platform, ' ') != 'ios 13' && join(matrix.platform, ' ') != 'tvos 13' && join(matrix.platform, ' ') != 'ios 17' && join(matrix.platform, ' ') != 'tvos 17' && matrix.platform[0] != 'visionos' }}
+      - if: ${{ join(matrix.platform, ' ') != 'iOS 13' && join(matrix.platform, ' ') != 'tvOS 13' && join(matrix.platform, ' ') != 'iOS 17' && join(matrix.platform, ' ') != 'tvOS 17' && matrix.platform[0] != 'visionos' }}
         name: Run Tests (Introspect)
         run: fastlane test platform:${{ matrix.platform[0] }} version:${{ matrix.platform[1] }} scheme:Introspect
 
-      - if: ${{ join(matrix.platform, ' ') != 'macos 11' }}
+      - if: ${{ join(matrix.platform, ' ') != 'macOS 11' }}
         name: Run Tests (SwiftUIIntrospect)
         run: fastlane test platform:${{ matrix.platform[0] }} version:${{ matrix.platform[1] }} scheme:SwiftUIIntrospectTests configuration:Debug
 
-      - if: ${{ matrix.platform[0] == 'ios' && matrix.platform[1] <= '16' }}
+      - if: ${{ matrix.platform[0] == 'iOS' && matrix.platform[1] <= '16' }}
         name: Run UI Tests (SwiftUIIntrospect)
         run: fastlane test platform:${{ matrix.platform[0] }} version:${{ matrix.platform[1] }} scheme:SwiftUIIntrospectUITests configuration:Debug
