--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -137,16 +137,14 @@ jobs:
           xcrun simctl list
           xcodebuild -scheme "Showcase" -showdestinations
 
-      - if: ${{ join(matrix.platform, ' ') != 'macOS 11' }}
-        name: Build Showcase
+      - name: Build Showcase
         run: fastlane build platform:${{ matrix.platform[0] }} version:${{ matrix.platform[1] }} scheme:Showcase
 
       - if: ${{ join(matrix.platform, ' ') != 'iOS 13' && join(matrix.platform, ' ') != 'tvOS 13' && join(matrix.platform, ' ') != 'iOS 17' && join(matrix.platform, ' ') != 'tvOS 17' && matrix.platform[0] != 'visionos' }}
         name: Run Tests (Introspect)
         run: fastlane test platform:${{ matrix.platform[0] }} version:${{ matrix.platform[1] }} scheme:Introspect
 
-      - if: ${{ join(matrix.platform, ' ') != 'macOS 11' }}
-        name: Run Tests (SwiftUIIntrospect)
+      - name: Run Tests (SwiftUIIntrospect)
         run: fastlane test platform:${{ matrix.platform[0] }} version:${{ matrix.platform[1] }} scheme:SwiftUIIntrospectTests configuration:Debug
 
       - if: ${{ matrix.platform[0] == 'iOS' && matrix.platform[1] <= '16' }}
