--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,8 +15,8 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  lint-podspecs:
-    name: Lint Podspecs
+  lint-podspec:
+    name: Lint Podspec
     runs-on: macos-latest
     steps:
       - name: Git Checkout
@@ -24,13 +24,7 @@ jobs:
         with:
           fetch-depth: 0 # required to be able to find Git tags
 
-      - name: Lint Introspect.podspec
-        run: |
-          set -eo pipefail
-          export LIB_VERSION=$(git describe --tags `git rev-list --tags --max-count=1`)
-          pod lib lint Introspect.podspec --allow-warnings
-
-      - name: Lint SwiftUIIntrospect.podspec
+      - name: Lint Podspec
         run: |
           set -eo pipefail
           export LIB_VERSION=$(git describe --tags `git rev-list --tags --max-count=1`)
@@ -91,10 +85,6 @@ jobs:
             os: macos-13
             xcode: 15.0
 
-          - platform: [macOS, 11]
-            runtime: macOS 11
-            os: macos-11
-            xcode: 13.2.1
           - platform: [macOS, 12]
             runtime: macOS 12
             os: macos-12
@@ -137,18 +127,12 @@ jobs:
           xcrun simctl list
           xcodebuild -scheme "Showcase" -showdestinations
 
-      - if: ${{ join(matrix.platform, ' ') != 'macOS 11' }}
-        name: Build Showcase
+      - name: Build Showcase
         run: fastlane build platform:${{ matrix.platform[0] }} version:${{ matrix.platform[1] }} scheme:Showcase
 
-      - if: ${{ join(matrix.platform, ' ') != 'iOS 13' && join(matrix.platform, ' ') != 'tvOS 13' && join(matrix.platform, ' ') != 'iOS 17' && join(matrix.platform, ' ') != 'tvOS 17' && matrix.platform[0] != 'visionos' }}
-        name: Run Tests (Introspect)
-        run: fastlane test platform:${{ matrix.platform[0] }} version:${{ matrix.platform[1] }} scheme:Introspect
-
-      - if: ${{ join(matrix.platform, ' ') != 'macOS 11' }}
-        name: Run Tests (SwiftUIIntrospect)
+      - name: Run Tests
         run: fastlane test platform:${{ matrix.platform[0] }} version:${{ matrix.platform[1] }} scheme:SwiftUIIntrospectTests configuration:Debug
 
       - if: ${{ matrix.platform[0] == 'iOS' && matrix.platform[1] <= '16' }}
-        name: Run UI Tests (SwiftUIIntrospect)
+        name: Run UI Tests
         run: fastlane test platform:${{ matrix.platform[0] }} version:${{ matrix.platform[1] }} scheme:SwiftUIIntrospectUITests configuration:Debug
