--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots/**/*.png
 fastlane/test_output
+
+/Tests/SimulatorStatusMagic/Artwork
