--- a/Tests/Tests.xcodeproj/xcshareddata/xcschemes/SwiftUIIntrospectUITests.xcscheme
+++ b/Tests/Tests.xcodeproj/xcshareddata/xcschemes/SwiftUIIntrospectUITests.xcscheme
@@ -5,15 +5,6 @@
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
-      <PostActions>
-         <ExecutionAction
-            ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
-            <ActionContent
-               title = "Run Script"
-               scriptText = "# Type a script or drag a script file from your workspace to insert its path.&#10;">
-            </ActionContent>
-         </ExecutionAction>
-      </PostActions>
       <BuildActionEntries>
          <BuildActionEntry
             buildForTesting = "YES"
@@ -41,7 +32,7 @@
             ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
             <ActionContent
                title = "Run Script"
-               scriptText = "#!/bin/bash&#10;&#10;cd ${PROJECT_DIR}/SimulatorStatusMagic &#10;./build_and_inject.sh booted &gt; ~/Downloads/loggy.log 2&gt;&amp;1&#10;cd -&#10;">
+               scriptText = "#!/bin/bash&#10;&#10;set -e&#10;&#10;unset MACOSX_DEPLOYMENT_TARGET&#10;unset TVOS_DEPLOYMENT_TARGET&#10;unset WATCHOS_DEPLOYMENT_TARGET&#10;unset DRIVERKIT_DEPLOYMENT_TARGET&#10;unset XROS_DEPLOYMENT_TARGET&#10;&#10;cd ${PROJECT_DIR}/SimulatorStatusMagic &#10;./build_and_inject.sh booted &gt; build/build_and_inject.log 2&gt;&amp;1&#10;cd -&#10;">
                <EnvironmentBuildable>
                   <BuildableReference
                      BuildableIdentifier = "primary"
