--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Tests/SimulatorStatusMagic"]
-	path = Tests/SimulatorStatusMagic
+[submodule "SimulatorStatusMagic"]
+	path = Tests/UITests/SimulatorStatusMagic
 	url = git@github.com:shinydevelopment/SimulatorStatusMagic.git
