--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -106,6 +106,9 @@ jobs:
         with:
           +: xcodes
 
+      - name: Set env variables
+        run: echo "SKIP_SLOW_FASTLANE_WARNING=1" >> $GITHUB_ENV
+
       - name: Select Xcode version
         run: sudo xcodes select ${{ matrix.xcode }}
 
