--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,9 @@ jobs:
         with:
           fetch-depth: 0 # required to be able to find Git tags
 
+      - name: Set up tea environment
+        uses: teaxyz/setup@v0
+
       - name: Lint Podspec
         run: |
           set -eo pipefail
