--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -16,7 +16,9 @@ jobs:
           fetch-depth: 0 # required to be able to find Git tags
 
       - name: Set up tea environment
-        uses: teaxyz/setup@v0
+        uses: teaxyz/setup@v1
+        with:
+          +: pod
 
       - name: Deploy to CocoaPods Trunk
         run: |
