--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,9 @@ jobs:
           fetch-depth: 0 # required to be able to find Git tags
 
       - name: Set up tea environment
-        uses: teaxyz/setup@v0
+        uses: teaxyz/setup@v1
+        with:
+          +: pod
 
       - name: Lint Podspec
         run: |
