--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -18,7 +18,10 @@ jobs:
       - name: Set up tea environment
         uses: teaxyz/setup@v1
         with:
-          +: pod
+          +: pod xcodes
+
+      - name: Select Xcode version
+        run: sudo xcodes select 15.0
 
       - name: Deploy to CocoaPods Trunk
         run: |
