--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   deploy:
     name: Deploy to CocoaPods Trunk
-    runs-on: macos-latest
+    runs-on: macos-13
     steps:
       - name: Git Checkout
         uses: actions/checkout@v3
