--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -104,8 +104,8 @@ jobs:
       - name: Git Checkout
         uses: actions/checkout@v4
 
-      - name: Set up tea environment
-        uses: teaxyz/setup@v1
+      - name: Set up pkgx environment
+        uses: pkgxdev/setup@v1
         with:
           +: xcodes
 
