--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -105,9 +105,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up pkgx environment
-        uses: pkgxdev/setup@v0
+        uses: pkgxdev/setup@v1
         with:
-          +: github.com/XcodesOrg/xcodes
+          +: xcodes
 
       - name: Set environment variables
         run: echo "SKIP_SLOW_FASTLANE_WARNING=1" >> $GITHUB_ENV
