--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,8 +24,8 @@ jobs:
         with:
           fetch-depth: 0 # required to be able to find Git tags
 
-      - name: Set up tea environment
-        uses: teaxyz/setup@v1
+      - name: Set up pkgx environment
+        uses: pkgxdev/setup@v1
         with:
           +: pod xcodes
 
